--- a/app/views/snippets/forms/_otherform.html.erb
+++ b/app/views/snippets/forms/_otherform.html.erb
@@ -2,8 +2,6 @@
   <%= ff.input :title, required: false %>
   <%= ff.input :custom, required: false %>
   <%= ff.input :custom2, required: false, input_html: { rows: 4 } %>
-  <%= ff.input :start_date, required: false, html5: true %>
-  <%= ff.input :end_date, as: :date, start_year: Date.today.year - 30,
-                              end_year: Date.today.year, discard_day: true,
-                              order: [:month, :year], required: false %>
+  <%= ff.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+  <%= ff.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
 <% end %>
